Dark Version Update

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    
+    "DefaultConnection": "Server=DESKTOP-30A1023;Database=aspnet-AdminDashboard;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "AdminDashboardContextConnection": "Server=DESKTOP-30A1023;Database=AdminDashboard;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
